--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -39,12 +39,35 @@
 .rightContainerNavbar {
   display: flex;
   gap: 15px;
+  align-items: center;
+  justify-content: center;
 }
-.userIcon {
+.userIcon, .acceptIcon {
   width: 25px;
 }
 
 .userIcon:hover {
   cursor: pointer;
   transform: scale(1.2);
+}
+.badge {
+  height: 10px;
+  position: absolute;
+}
+.acceptUserContainer{
+  position: relative;
+  margin-bottom: -5px;
+}
+.acceptUserContainer:hover {
+  cursor: pointer;
+  transform: scale(1.1);
+}
+.ant-modal-content, .ant-modal-title {
+  background-color: var(--AirSuperiorityBLue-) !important;
+  font-family: var(--Font-);
+}
+.btnFooterDrawerContainer {
+  display: flex;
+  justify-content: end;
+  gap: 10px;
 }
