--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -71,3 +71,25 @@
   justify-content: end;
   gap: 10px;
 }
+.contactsUsersContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  margin-top: 10px;
+  max-height: 200px;
+  overflow-y: scroll;
+  -ms-overflow-style: none;
+  padding-right: 10px;
+}
+.contactsUsersContainer::-webkit-scrollbar {
+  width: 5px; 
+}
+
+.contactsUsersContainer::-webkit-scrollbar-thumb {
+  background-color: var(--WhiteSmoke-);
+}
+.contactsUsersContainer::-webkit-scrollbar-track {
+  background-color: var(--EerieBlack-); 
+}
+
+
