--- a/src/components/userContactToAcceptCard/usercontacttoacceptcard.css
+++ b/src/components/userContactToAcceptCard/usercontacttoacceptcard.css
@@ -15,3 +15,8 @@
   background-color: var(--EerieBlack-);
   font-family: var(--Font-);
 }
+.iconsContactToAcceptCardContainer {
+  display: flex;
+  gap: 5px;
+  align-items: center;
+}
