--- a/src/components/userContactsToAccept/userContactsToAccept.css
+++ b/src/components/userContactsToAccept/userContactsToAccept.css
@@ -15,3 +15,9 @@
   background-color: var(--EerieBlack-);
   font-family: var(--Font-);
 }
+
+.contactToAcceptContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
